# fluf

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  docker-compose.yml  pre-commit.sh  pyproject.toml  requirements.dev.txt  requirements.txt  run.sh
caopanheiro/: .coveragerc  manage.py
caopanheiro/caopanheiro/: asgi.py  settings.py  urls.py  wsgi.py
caopanheiro/core/: admin.py  models.py  serializers.py  urls.py  views.py
caopanheiro/core/migrations/: 0001_initial.py
caopanheiro/core/tests/: test_models.py
fluf/: manage.py
fluf/core/: models.py  serializers.py  views.py
fluf/core/migrations/: 0001_initial.py  0002_animal_core_animal_sexo_valid_and_more.py
fluf/fluf/: asgi.py  settings.py  urls.py  wsgi.py
